k8s/ghost-sapper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app: iteam-ghost
  name: iteam-ghost-sapper
  namespace: iteam-se
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: iteam-ghost
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: iteam-ghost
    spec:
      containers:
        image: iteam1337/iteam-ghost-sapper
        imagePullPolicy: IfNotPresent
        name: iteam-ghost-sapper
        ports:
          - containerPort: 3000
            name: http
            protocol: TCP
        resources:
          requests:
            cpu: 300m
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1001
        runAsUser: 1001
      terminationGracePeriodSeconds: 30
