k8s/ghost-db.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mariadb
  name: iteam-ghost-mariadb
  namespace: iteam-se
spec:
  ports:
  - name: mysql
    port: 3306
    protocol: TCP
    targetPort: mysql
  clusterIP: None
  selector:
    app: mariadb
  sessionAffinity: None
  type: ClusterIP
