k8s/ghost-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: iteam-ghost
  name: iteam-ghost
  namespace: iteam-se
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    nodePort: 32455
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: iteam-ghost
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
