k8s/sapper-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: iteam-ghost
  name: iteam-ghost-sapper
  namespace: iteam-se
spec:
  externalTrafficPolicy: Cluster
  ports:
    - name: http
      nodePort: 32456
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: iteam-ghost-sapper
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
